使用netty转发请求，有待改进

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 /.idea/
 /logs/
 /target/
+
+
+/gateway_service_A/target/
+/gateway_service_B/target/
+/gateway_common/target/
+/gateway_accept/target/
